Airflow_Installation/logs/dag_id=project_user_etl_dag/run_id=manual__2023-08-02T162115.824637+0000/task_id=load/attempt=1.log
[2023-08-02T16:21:47.778+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: project_user_etl_dag.load manual__2023-08-02T16:21:15.824637+00:00 [queued]>
[2023-08-02T16:21:47.878+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: project_user_etl_dag.load manual__2023-08-02T16:21:15.824637+00:00 [queued]>
[2023-08-02T16:21:47.887+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2023-08-02T16:21:47.896+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 2
[2023-08-02T16:21:47.897+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2023-08-02T16:21:48.036+0000] {taskinstance.py:1304} INFO - Executing <Task(PythonOperator): load> on 2023-08-02 16:21:15.824637+00:00
[2023-08-02T16:21:48.061+0000] {standard_task_runner.py:55} INFO - Started process 13658 to run task
[2023-08-02T16:21:48.094+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'project_user_etl_dag', 'load', 'manual__2023-08-02T16:21:15.824637+00:00', '--job-id', '3237', '--raw', '--subdir', 'DAGS_FOLDER/project.py', '--cfg-path', '/tmp/tmpesxx7nbf']
[2023-08-02T16:21:48.113+0000] {standard_task_runner.py:83} INFO - Job 3237: Subtask load
[2023-08-02T16:21:49.071+0000] {task_command.py:389} INFO - Running <TaskInstance: project_user_etl_dag.load manual__2023-08-02T16:21:15.824637+00:00 [running]> on host a4a69aba7e5b
[2023-08-02T16:21:50.214+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=your_email@example.com
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=project_user_etl_dag
AIRFLOW_CTX_TASK_ID=load
AIRFLOW_CTX_EXECUTION_DATE=2023-08-02T16:21:15.824637+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-08-02T16:21:15.824637+00:00
[2023-08-02T16:21:50.337+0000] {base.py:73} INFO - Using connection ID 'my_connection' for task execution.
[2023-08-02T16:21:50.754+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 192, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/project.py", line 61, in load_data
    cur.execute(insert)
psycopg2.errors.SyntaxError: syntax error at or near "ARRAY"
LINE 1: INSERT INTO users VALUES ARRAY['اميرمحمد','پارسا','male','my...
                                 ^

[2023-08-02T16:21:50.806+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=project_user_etl_dag, task_id=load, execution_date=20230802T162115, start_date=20230802T162147, end_date=20230802T162150
[2023-08-02T16:21:51.154+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 3237 for task load (syntax error at or near "ARRAY"
LINE 1: INSERT INTO users VALUES ARRAY['اميرمحمد','پارسا','male','my...
                                 ^
; 13658)
[2023-08-02T16:21:51.221+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2023-08-02T16:21:51.337+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
